# lambda-calculus

./: .gitignore  README.md  flake.nix
nix/: default.nix  shell.nix
samples/: arithmetic.lambda  bool.lambda  divide.lambda  identity_with_int.lambda  multiple_expressions.lambda  multiplication.lambda  name_and_int.lambda  sum.lambda
src/: dune  formal.ml  formal.mli  lexer.ml  lexer.mli  main.ml  parser.mly  semantic.ml  semantic.mli
src/Lib/: dune  lexer.mli  parser.mly  semantic.ml
test/: dune  main.ml
