(library
 (name lexical)
 (libraries menhirLib)
 (modules
  (:standard \ Main))
 (preprocess
  (pps ppx_deriving.show sedlex.ppx)))

(menhir
 (modules parser)
 (flags --dump --explain --table))

(executable
 (name main)
 (public_name lambdac)
 (modules Main)
 (libraries lexical)
 (preprocess
  (pps ppx_deriving.show)))
