(library
 (name frontend)
 (libraries menhirLib)
 (modules
  (:standard \ Main))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq sedlex.ppx)))

(menhir
 (modules parser)
 (flags --dump --explain --table))

(executable
 (name main)
 (public_name compiler)
 (modules Main)
 (libraries frontend core)
 (preprocess
  (pps ppx_deriving.show)))
